@@ -1,3 +1,7 @@
+2020-04-21  Robby Stephenson  <robby@periapsis.org>
+
+	* Updated GiantBomb API endpoint.
+
 2020-04-19  Robby Stephenson  <robby@periapsis.org>
 
 	* Updated kino.de data source.
